<?php

namespace App\Models;

// use Illuminate\Contracts\Auth\MustVerifyEmail;
use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Foundation\Auth\User as Authenticatable;
use Illuminate\Notifications\Notifiable;
use Laravel\Sanctum\HasApiTokens;

class User extends Authenticatable
{
    use HasApiTokens, HasFactory, Notifiable;

    /**
     * The attributes that are mass assignable.
     *
     * @var array<int, string>
     */
    protected $fillable = [
        'name',
        'email',
        'password',
    ];

    /**
     * The attributes that should be hidden for serialization.
     *
     * @var array<int, string>
     */
    protected $hidden = [
        'password',
        'remember_token',
    ];

    /**
     * The attributes that should be cast.
     *
     * @var array<string, string>
     */
    protected $casts = [
        'password' => 'hashed',
    ];

    /**
     * Relations
     */
    public function profile()
    {
        return $this->hasOne(UserProfile::class);
    }

    public function ledgers()
    {
        return $this->hasMany(Ledger::class);
    }

    public function entries()
    {
        return $this->hasMany(Entry::class);
    }

    public function preferences()
    {
        return $this->hasMany(UserPreference::class);
    }

    public function categories()
    {
        return $this->hasMany(Category::class);
    }

    public function taxRules()
    {
        return $this->hasMany(TaxRule::class);
    }

    public function taxFilingData()
    {
        return $this->hasMany(TaxFilingData::class);
    }
}
