//////////////////////////////////////////////////////////
// Users
//////////////////////////////////////////////////////////

Table users {
  id bigint [pk, increment]
  name varchar
  email varchar [unique]
  password varchar
  remember_token varchar
  created_at timestamp
  updated_at timestamp
}

//////////////////////////////////////////////////////////
// User Profiles
//////////////////////////////////////////////////////////

Table user_profiles {
  user_id bigint [pk]
  app_role varchar(50)
  tax_filing_method varchar(50)
  invoice_enabled boolean
  invoice_number varchar(20) [unique]
  business_name varchar
  first_login boolean
  created_at timestamp
  updated_at timestamp
}

Ref: user_profiles.user_id > users.id

//////////////////////////////////////////////////////////
// Categories (Revenue / Expense)
//////////////////////////////////////////////////////////

Table categories {
  id bigint [pk, increment]
  category_name varchar(100) [unique]
  default_type varchar(20) // Revenue | Expense
  default_tax_category varchar(50)
  created_at timestamp
  updated_at timestamp
}

//////////////////////////////////////////////////////////
// User Preferences (hidden category settings)
//////////////////////////////////////////////////////////

Table user_preferences {
  user_id bigint
  category_id bigint
  is_hidden boolean
  created_at timestamp
  updated_at timestamp

  Indexes {
    (user_id, category_id) [pk]
  }
}

Ref: user_preferences.user_id > users.id
Ref: user_preferences.category_id > categories.id

//////////////////////////////////////////////////////////
// Ledgers (per fiscal year bookkeeping)
//////////////////////////////////////////////////////////

Table ledgers {
  id bigint [pk, increment]
  user_id bigint
  fiscal_year smallint
  status varchar(50) // Draft | Open | Closed
  locked_at timestamp
  created_at timestamp
  updated_at timestamp

  Indexes {
    (user_id, fiscal_year) [unique]
  }
}

Ref: ledgers.user_id > users.id

//////////////////////////////////////////////////////////
// Tax Rules (tax rate & deduction rules by year)
//////////////////////////////////////////////////////////

Table tax_rules {
  id bigint [pk, increment]
  rule_type varchar(50)
  value_numeric decimal(15,4)
  fiscal_year smallint
  created_at timestamp
  updated_at timestamp

  Indexes {
    (rule_type, fiscal_year) [unique]
  }
}

//////////////////////////////////////////////////////////
// Entries (Income & Expense unified table)
//////////////////////////////////////////////////////////

Table entries {
  id bigint [pk, increment]
  user_id bigint
  ledger_id bigint
  category_id bigint
  tax_rule_id bigint

  transaction_date timestamp
  amount_inc_tax decimal(15,2)
  tax_category varchar(50)
  is_invoice_received boolean

  description text
  partner_name varchar

  created_at timestamp
  updated_at timestamp
}

Ref: entries.user_id > users.id
Ref: entries.ledger_id > ledgers.id
Ref: entries.category_id > categories.id
Ref: entries.tax_rule_id > tax_rules.id

//////////////////////////////////////////////////////////
// Tax Filing Data (確定申告書B入力）←今は仮のまま
//////////////////////////////////////////////////////////

Table tax_filing_data {
  id bigint [pk, increment]

  user_id bigint
  ledger_id bigint [unique]

  // ★ 詳細項目は後で最終化するため、今は仮として残す
  salary_income decimal(15,2)
  salary_withholding_tax decimal(15,2)

  life_insurance_ded decimal(15,2)
  social_insurance_ded decimal(15,2)
  medical_expense_ded decimal(15,2)
  furusato_tax_ded decimal(15,2)
  dependency_deduction_count smallint

  created_at timestamp
  updated_at timestamp
}

Ref: tax_filing_data.user_id > users.id
Ref: tax_filing_data.ledger_id > ledgers.id
